membuat halaman detailSeries

--- a/css/riset/riset.css
+++ b/css/riset/riset.css
@@ -119,6 +119,10 @@ section {
   margin-left: 20px;
 }
 
+.mr-10 {
+  margin-right: 10px;
+}
+
 .mr-20 {
   margin-right: 20px;
 }
@@ -174,6 +178,10 @@ section {
   border-color: var(--danger);
 }
 
+.btn-danger:hover {
+  background-color: var(--danger-hover);
+}
+
 .btn-danger:focus {
   outline: 2px solid var(--outline-danger);
 }
@@ -184,9 +192,17 @@ section {
   border-color: var(--primary);
 }
 
+.btn-primary:hover {
+  background-color: var(--primary-hover);
+}
+
 .btn-warning {
   background-color: var(--warning);
   border-color: var(--warning);
+}
+
+.btn-warning:hover {
+  background-color: var(--warning-hover);
 }
 
 .btn-warning:focus {
@@ -208,8 +224,12 @@ section {
   border-color: var(--dark);
 }
 
+.btn-dark:hover {
+  background-color: var(--dark-hover);
+}
+
 .btn-dark:focus {
-  outline: 2px solid var(--outline-danger);
+  outline: 2px solid var(--outline-dark);
 }
 
 .modalContainer.active {
