--- a/css/style.scss
+++ b/css/style.scss
@@ -20,8 +20,13 @@
     --danger: #dc3545;
     --primary: #007bff;
     --warning: #ffc107;
-    --dark: #5b5b5c;
+    --dark: rgb(55 65 81);
 
+
+    --danger-hover: #c52939;
+    --primary-hover: #0070e7;
+    --warning-hover: #e2ab06;
+    --dark-hover: #2F3949;
 
     --border-table: 1px solid #dee2e6;
     --table-dark: #343a40;
@@ -413,6 +418,12 @@ header {
                 justify-content: center;
                 border-radius: 7px;
                 background-color: var(--putih);
+
+                &:hover {
+                    p {
+                        color: var(--biru-cerah);
+                    }
+                }
 
                 span {
                     padding: 10px;
@@ -808,6 +819,177 @@ footer .container {
 
 
 
+// Detail Kelas start
+.heroDetailKelas {
+    width: 100%;
+    height: 100vh;
+    // min-height: 80vh;
+    max-height: 100%;
+    background-color: var(--hero);
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .caption {
+            width: 60%;
+
+            h1 {
+                font-size: 2rem;
+                margin-bottom: 30px;
+                color: var(--putih);
+            }
+
+            p {
+                font-size: 1.1rem;
+                font-weight: 500;
+                line-height: 30px;
+                color: var(--putih);
+            }
+
+            .keterangan {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 30px 0;
+
+                .perKeterangan {
+                    display: flex;
+                    align-items: center;
+
+                    .icon {
+                        width: 20px;
+                        height: 20px;
+                        color: var(--putih);
+                        fill: var(--putih);
+                        margin-right: 10px;
+                    }
+                }
+            }
+
+            a {
+                padding: 12px 25px;
+            }
+        }
+
+
+        img {
+            width: 40%;
+            height: 300px;
+            background-size: cover;
+            object-fit: cover;
+            margin-left: 20px;
+            border-radius: 20px;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+.detailKelas {
+
+    .container {
+        display: flex;
+        justify-content: center;
+
+
+        h2 {
+            font-size: 1.5rem;
+            color: var(--biru-cerah);
+            margin-bottom: 20px;
+        }
+
+
+        .tentangKelas {
+            width: 70%;
+            margin-right: 20px;
+
+            .perTentangKelas {
+                padding: 30px 20px;
+                margin: 20px 0;
+                border-radius: 10px;
+                border: var(--border);
+                background-color: var(--putih);
+
+                p {
+                    line-height: 30px;
+                    font-weight: 450;
+                }
+
+                .materi {
+
+                    p {
+                        padding: 20px;
+                        margin: 10px 0;
+                        font-weight: 550;
+                        border-radius: 10px;
+                        background-color: #EFF2F6;
+                    }
+                }
+            }
+        }
+
+
+        .infoKelas {
+            width: 30%;
+            position: sticky;
+            top: 11vh;
+            align-self: flex-start;
+
+            .perInfoKelas {
+                padding: 30px 20px;
+                margin: 20px 0;
+                border-radius: 10px;
+                border: var(--border);
+                background-color: var(--putih);
+
+                .infoMateri {
+                    display: flex;
+                    align-items: center;
+                    padding: 10px 20px;
+                    margin: 10px 0;
+                    font-weight: 500;
+                    border-radius: 10px;
+                    background-color: #EFF2F6;
+
+                    img {
+                        height: 40px;
+                        margin-right: 10px;
+                    }
+                }
+
+                .mentor {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 20px;
+
+                    img {
+                        width: 50px;
+                        height: 50px;
+                        object-fit: cover;
+                        border-radius: 50%;
+                        margin-right: 10px;
+                    }
+
+                    p {
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+
+
+    }
+}
+
+// Detail Kelas end
 
 
 
