--- a/css/style.scss
+++ b/css/style.scss
@@ -1019,6 +1019,118 @@ footer .container {
 
 
 
+// Per Detail Kelas Start
+.heroMateri {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--hero);
+
+    .container {
+
+        img,
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.containerMateri {
+    width: 100%;
+    height: 100%;
+
+    .container {
+        display: flex;
+        // align-items: center;
+        justify-content: space-between;
+
+        .detailMateri {
+            width: 70%;
+            margin-right: 20px;
+
+            .infoMateri {
+                width: 100%;
+                // height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: 20px;
+                border-radius: 10px;
+                border: var(--border);
+                position: relative;
+
+                .kanan {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+
+                h2 {
+                    font-size: 1.2rem;
+                    margin-left: 20px;
+                }
+
+                .icon {
+                    width: 40px;
+                    height: 40px;
+                    // top: 10px;
+                    // position: absolute;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 50%;
+                    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+                    background-color: var(--putih);
+                    transition: .5s;
+
+                    &:hover {
+                        color: var(--putih);
+                        background-color: var(--biru-cerah);
+                    }
+                }
+            }
+
+
+            article {
+                width: 100%;
+                padding: 20px;
+                border-radius: 10px;
+                border: var(--border);
+
+                ul {
+                    margin: 10px 0;
+
+                    li {
+                        margin: 5px 0 5px 20px;
+                        list-style: initial;
+                        // list-style: disc;
+                    }
+                }
+
+                p {
+                    margin: 5px 0;
+                }
+            }
+
+            &>* {
+                margin: 20px 0;
+            }
+        }
+
+        .KeteranganSeries {
+            width: 30%;
+            // height: 100vh;
+            background-color: red;
+        }
+    }
+}
+
+// Per Detail Kelas End 
+
+
+
+
 
 
 
