Membuat halaman login

--- a/css/form/form.css
+++ b/css/form/form.css
@@ -16,6 +16,7 @@ form .form-group {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
+  margin: 10px 0;
 }
 
 form .form-group textarea,
