--- a/css/form/form.scss
+++ b/css/form/form.scss
@@ -12,6 +12,7 @@ form .form-group {
     display: flex;
     flex-direction: column;
     position: relative;
+    margin: 10px 0;
 
     textarea,
     select,
